--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,11 +4,11 @@
 		<p class="my-0">{{ .Site.Author.slogon }}</p>
 		<p class="my-3 home-intro">{{ .Site.Author.description | markdownify | safeHTML }}</p>
 		{{ if eq .Paginator.PageNumber 1 }}
-		<h3 class="my-6">{{ .Site.Params.recent }}</h3>
+		<h3 class="my-6 text-success">{{ .Site.Params.recent }}</h3>
 		{{ else }}
-		<h3 class="my-6">{{ .Site.Params.older }}</h3>
+		<h3 class="my-6 text-success">{{ .Site.Params.older }}</h3>
 		{{ end }}
-		<hr class="hr-colorful">
+
 		<div>
 			{{ $paginator := .Paginate (where .Site.RegularPages "Kind" "page") }}
 			{{ range $paginator.Pages }}
