--- a/layouts/partials/sharebtn.html
+++ b/layouts/partials/sharebtn.html
@@ -20,6 +20,6 @@
     
     <div class="container-fluid">
         <div class="shareBtn">
-                <a  id="upBtn"  href="javascript:topFunction()" title="向上"> <i class="fa fa-arrow-up fa-2x text-warning"></i></a>
+                <a  id="upBtn"  href="javascript:topFunction()" title="向上"> <i class="fa fa-arrow-up fa-2x text-info"></i></a>
         </div>
     </div>
