--- a/layouts/show/single.html
+++ b/layouts/show/single.html
@@ -2,7 +2,7 @@
 {{ if .Params.toc }}
 {{ partial "toc.html" . }}
 {{ end }}
-<h2 class="mt-6 mb-6 text-info">{{ .Title }}</h2>
+<h2 class="mt-6 mb-6 text-warning">{{ .Title }}</h2>
 <hr class="hr-colorful">
 <div class="mb-3 text-xs flex justify-between sm:flex-col">
 	<div>
