--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -56,8 +56,8 @@ p {
 }
 
 hr {
-  border-width: 0;
-  border-top: 1px solid var(--bd);
+  height: 1.5px!important;
+  opacity: 0.8!important;
 }
 
 pre,
