--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,13 +1,14 @@
 <header class="flex justify-between items-center mb-6 sm:my-3">
-
-  <div class="flex items-center">
+  <!-- <div class="flex items-center">
     {{ if .Site.Params.brand }}
-    <div class="mr-3 text-3xl"><a href="/">{{ .Site.Params.brand }}</a></div>
+    <div class="mr-3 text-3xl text-muted">
+      <a href="/">{{ .Site.Params.brand }}</a>    
+    </div>
     {{ end }}
-  </div>
+  </div> -->
   <nav class="flex items-center whitespace-nowrap overflow-x-auto overflow-y-hidden">
     {{ range .Site.Menus.main }}
-    <a class="ml-8" href="{{ .URL }}">{{ .Name }}</a>
+    <a class="ml-3 mr-3" href="{{ .URL }}">{{ .Name }}</a>
     {{ end }}
   </nav>
   <div class="flex items-center">
