修正代码顺序

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -36,12 +36,12 @@
   <link rel="stylesheet" href="/css/app.css">
   <script defer type="text/javascript" src="{{ $js.RelPermalink }}"></script>
   <script src="https://cdn.staticfile.org/jquery/3.5.1/jquery.min.js"></script>
-  <!-- do not set the version number -->
+  <!-- do not set the version number
   <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
-  <!-- or set latest -->
+  or set latest
   <script src="//unpkg.com/valine@latest/dist/Valine.min.js"></script>
-  <!-- or Default value -->
-  <script src="//unpkg.com/valine"></script>
+  or Default value
+  <script src="//unpkg.com/valine"></script> -->
   <script src="/js/app.js"></script>
     
 </head>
